1、大升级，支持会员渠道bate